--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
 		<mysql-connector-java.version>5.1.29</mysql-connector-java.version>
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
 		<mybatis.version>3.2.8</mybatis.version>
+		<docker.registry>registry-vpc.cn-beijing.aliyuncs.com</docker.registry>
+		<docker.registry.namespace>jml</docker.registry.namespace>
 	</properties>
 
 
@@ -66,6 +68,14 @@
 				<version>2.19.1</version>
 				<configuration>
 					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.4.13</version>
+				<configuration>
+					<skipDocker>true</skipDocker>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -128,35 +138,44 @@
 						</executions>
 					</plugin>
 					<!-- GPG -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
-						<configuration>
-							<useAgent>false</useAgent>
-						</configuration>
-						<executions>
-							<execution>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
+
 				</plugins>
 			</build>
-			<distributionManagement>
-				<snapshotRepository>
-					<id>oss</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-				</snapshotRepository>
-				<repository>
-					<id>oss</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-			</distributionManagement>
 		</profile>
 	</profiles>
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://120.25.126.86:8081/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://120.25.126.86:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>internal-nexus</id>
+			<name>internal-nexus</name>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<url>http://120.25.126.86:8081/nexus/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>internal-nexus-springmilestone</id>
+			<name>internal-nexus-springmilestone</name>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<url>http://120.25.126.86:8081/nexus/content/repositories/springmilestone/</url>
+		</repository>
+	</repositories>
 
 </project>
