--- a/xxl-conf-admin/pom.xml
+++ b/xxl-conf-admin/pom.xml
@@ -124,10 +124,10 @@
 		</dependency>
 
 	</dependencies>
-<build>
+	<build>
 		<resources><!-- 使用@@站位符，输出Dockerfile至docker文件夹 -->
 			<resource>
-				<directory>src/main/resouces/docker</directory>
+				<directory>src/main/resources/docker</directory>
 				<filtering>true</filtering>
 				<includes>
 					<include>**/Dockerfile</include>
@@ -160,20 +160,17 @@
 				<version>0.4.13</version>
 				<configuration>
 					<imageName>${docker.registry}/${docker.registry.namespace}/${project.artifactId}:${project.version}</imageName>
-					<dockerDirectory>${project.build.directory}</dockerDirectory>
+					<dockerDirectory>${project.build.directory}/docker</dockerDirectory>
 					<resources>
-						<resource>
-							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>*.war</include>
-						</resource>
-						<resource>
-							<directory>${project.build.directory}</directory>
-							<filtering>true</filtering>
-							<includes>
-								<include>Dockerfile</include>
-							</includes>
-						</resource>
+					<resource>
+					<targetPath>/</targetPath>
+					<directory>${project.build.directory}</directory>
+					<includes>
+					<include>*.war</include>
+						<include>Dockerfile</include>
+					</includes>
+					<filtering>true</filtering>
+					</resource>
 					</resources>
 					<forceTags>true</forceTags>
 					<pushImageTag>true</pushImageTag>
@@ -184,7 +181,7 @@
 					</imageTags>
 					<skipDocker>false</skipDocker>
 				</configuration>
-				</plugin>
+			</plugin>
 		</plugins>
 	</build>
 </project>
