--- a/xxl-conf-admin/pom.xml
+++ b/xxl-conf-admin/pom.xml
@@ -132,7 +132,7 @@
 				<includes>
 					<include>**/Dockerfile</include>
 				</includes>
-				<targetPath>${project.build.directory}</targetPath>
+				<targetPath>${project.build.directory}/docker</targetPath>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -167,7 +167,7 @@
 					<directory>${project.build.directory}</directory>
 					<includes>
 					<include>*.war</include>
-						<include>Dockerfile</include>
+					<include>Dockerfile</include>
 					</includes>
 					<filtering>true</filtering>
 					</resource>
