--- a/xxl-conf-admin/src/main/resources/xxl-conf.properties
+++ b/xxl-conf-admin/src/main/resources/xxl-conf.properties
@@ -1,11 +1,11 @@
 # xxl-conf, zk address
-xxl.conf.zkserver=127.0.0.1:2181
+xxl.conf.zkserver=zk:2181
 
 # xxl-conf, jdbc
 xxl.conf.jdbc.driverClass=com.mysql.jdbc.Driver
-xxl.conf.jdbc.url=jdbc:mysql://localhost:3306/xxl-conf?Unicode=true&amp;characterEncoding=UTF-8
+xxl.conf.jdbc.url=jdbc:mysql://db:3306/xxl-conf?Unicode=true&amp;characterEncoding=UTF-8
 xxl.conf.jdbc.username=root
-xxl.conf.jdbc.password=root_pwd
+xxl.conf.jdbc.password=root
 
 # xxl-conf, admin login
 xxl.conf.login.username=admin
